add django-celery-beat package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ daphne = "*"
 dice = "*"
 dj-database-url = "*"
 django = "~=5.0"
+django-celery-beat = "*"
 django-extensions = "*"
 django-viewflow = "*"
 email-validator = "*"
