install django-model-utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dj-database-url = "*"
 django = "~=5.0"
 django-celery-beat = "*"
 django-extensions = "*"
+django-model-utils = "*"
 django-viewflow = "*"
 email-validator = "*"
 gunicorn = "*"
