install django-model-utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dice = "*"
 dj-database-url = "*"
 django = "~=5.0"
 django-extensions = "*"
+django-model-utils = "*"
 django-viewflow = "*"
 email-validator = "*"
 gunicorn = "*"
