--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ django-coverage-plugin = "*"
 django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
+freezegun = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-asyncio = "*"
