--- a/fly.toml
+++ b/fly.toml
@@ -14,6 +14,7 @@ console_command = '/code/manage.py shell'
 
 [env]
   PORT = '8000'
+  DJANGO_SETTINGS_MODULE="role_play.settings.production"
 
 [http_service]
   internal_port = 8000
