add redis and pg settings

--- a/fly.toml
+++ b/fly.toml
@@ -10,25 +10,29 @@ console_command = '/code/manage.py shell'
 [build]
 
 [deploy]
-  release_command = 'python manage.py migrate --noinput'
+release_command = 'python manage.py migrate --noinput'
 
 [env]
-  PORT = '8000'
-  DJANGO_SETTINGS_MODULE="role_play.settings.production"
+PORT = '8000'
+DJANGO_SETTINGS_MODULE = "role_play.settings.production"
+REDIS_URL = "fly-role-play-redis.upstash.io"
+PGUSER="postgres"
+PGHOST="role-play-db.internal"
+PGPORT="5433"
 
 [http_service]
-  internal_port = 8000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8000
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
 
 [[statics]]
-  guest_path = '/code/static'
-  url_prefix = '/static/'
+guest_path = '/code/static'
+url_prefix = '/static/'
