--- a/fly.toml
+++ b/fly.toml
@@ -40,5 +40,5 @@ cpu_kind = 'shared'
 cpus = 1
 
 [[statics]]
-guest_path = '/code/static'
+guest_path = '/code/staticfiles'
 url_prefix = '/static/'
