--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,8 @@ release_command = 'python manage.py migrate --noinput'
 [env]
 PORT = '8000'
 DJANGO_SETTINGS_MODULE = "role_play.settings.production"
-REDIS_URL = "fly-role-play-redis.upstash.io"
+REDISHOST = "fly-role-play-redis.upstash.io"
+REDISPORT = "6379"
 PGUSER = "postgres"
 PGHOST = "role-play-db.internal"
 PGPORT = "5433"
