--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ console_command = '/code/manage.py shell'
 [build]
 
 [deploy]
-release_command = 'python manage.py migrate --noinput'
+release_command = 'invoke prod.deploy'
 
 [env]
 PORT = '8000'
