--- a/fly.toml
+++ b/fly.toml
@@ -14,7 +14,7 @@ release_command = 'invoke prod.deploy'
 
 [env]
 PORT = '8000'
-DJANGO_SETTINGS_MODULE = "role_play.settings.production"
+DJANGO_SETTINGS_MODULE = "role_play.settings.production_fly"
 REDISHOST = "fly-role-play-redis.upstash.io"
 REDISPORT = "6379"
 PGUSER = "postgres"
