remove env variables in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,8 @@ on:
 
 env:
   DJANGO_SETTINGS_MODULE: role_play.settings.local
-  PGUSER: ciuser
-  REDISHOST: 127.0.0.1
-  REDISPORT: 6379
-  REDIS_URL: redis://127.0.0.1
   PGPASSWORD: ${{secrets.PGPASSWORD}}
-  PGHOST: 127.0.0.1
-  PGPORT: 5432
   DJANGO_SECRET_KEY: ${{secrets.DJANGO_SECRET_KEY}}
-  EMAIL_DOMAIN: ${{secrets.EMAIL_DOMAIN}}
   PYTEST_PLUGINS: celery.contrib.pytest
 
 jobs:
@@ -35,8 +28,8 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: ${{env.PGUSER}}
-          POSTGRES_PASSWORD: ${{env.PGPASSWORD}}
+          POSTGRES_USER: ciuser
+          POSTGRES_PASSWORD: ${{secrets.PGPASSWORD}}
           POSTGRES_DB: role-play
         ports:
           - 5432:5432
