--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,10 @@ console_command = '/code/manage.py shell'
 [deploy]
 release_command = 'invoke prod.deploy'
 
+[processes] # <-- Updated!
+app = "invoke prod.run"
+worker = "invoke prod.run-worker"
+
 [env]
 PORT = '8000'
 DJANGO_SETTINGS_MODULE = "role_play.settings.production_fly"
