install django-formtools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dj-database-url = "*"
 django = "~=5.1"
 django-celery-beat = "*"
 django-extensions = "*"
+django-formtools = "*"
 django-model-utils = "*"
 django-viewflow = "*"
 email-validator = "*"
