--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,12 @@ jobs:
         python-version: '3.11'
     - name: Install Dependencies
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry install
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        uv sync
     - name: Run Tests
       run: |
-        poetry run invoke test.run --verbose --coverage
-        poetry run invoke test.coverage-report --output-format xml
+        uv run invoke test.run --verbose --coverage
+        uv run invoke test.coverage-report --output-format xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
