--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ omit = ["manage.py", "tasks/*"]
 exclude = ["role_play/asgi.py", "role_play/urls.py", "role_play/settings/*"]
 
 [tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "session"
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
 
 [project]
