--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,11 @@ asyncio_default_fixture_loop_scope = "session"
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
 
 [project]
-authors = [
-    {name = "Eric Grabarczyk", email = "eric.grabarczyk@gmail.com"},
-]
-license = {text = "GNU Affero General Public License v3.0"}
+authors = [{ name = "Eric Grabarczyk", email = "eric.grabarczyk@gmail.com" }]
+license = { text = "GNU Affero General Public License v3.0" }
 requires-python = "<4.0,>=3.13"
 dependencies = [
+    "anthropic",
     "async-timeout",
     "celery",
     "channels",
