add missing ANTHROPIC_API_KEY in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ env:
   PGPASSWORD: ${{secrets.PGPASSWORD}}
   DJANGO_SECRET_KEY: ${{secrets.DJANGO_SECRET_KEY}}
   PYTEST_PLUGINS: celery.contrib.pytest
+  ANTHROPIC_API_KEY: cikey # Not used in CI
 
 jobs:
   build:
