Use environment variables for secrets (passwords and API keys)
- Replace hardcoded PostgreSQL password with POSTGRES_PASSWORD env var in docker-compose.yml
- Update local.py and ci.py settings to use POSTGRES_PASSWORD from environment
- Add .env.example file to document required secret environment variables
- Keep non-sensitive config (usernames, db names, hosts, ports) hardcoded
- All 299 tests passing with Doppler environment variable injection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     image: "postgres:alpine"
     restart: always
     environment:
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=devpwd
-      - POSTGRES_DB=role-play
+      POSTGRES_USER: devuser
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: role-play
     ports:
       - "5432:5432"
     volumes:
