chore: configure Renovate to manage pre-commit hooks

--- a/renovate.json
+++ b/renovate.json
@@ -55,7 +55,8 @@
     "pip_requirements",
     "dockerfile",
     "docker-compose",
-    "github-actions"
+    "github-actions",
+    "pre-commit"
   ],
   "rangeStrategy": "bump",
   "vulnerabilityAlerts": {
